@startuml

package org.eclipse.lsp4j {
}
note right of org.eclipse.lsp4j
    Defines the LSP spec as Java types
    and implements transport, serialization,
    entry point, and more.
end note

package com.soartech.soarls {
    class Server
    note left of Server
        Constructed by the
        application's entry point.
    end note

    class SoarDocumentService

    class SoarWorkspaceService
    note left of SoarWorkspaceService
        Mostly forwards data to
        the SoarDocumentService
    end note

    class Documents

    class Configuration
    note left of Configuration
        This is for client-specific configuration.
        Although technically part of the public API,
        it should be treated as an implementation detail.
    end note

    class ProjectConfiguration {
        entryPoints : List<EntryPoint>
        active : String
        rhsFunctions : List<String>
    }
    note left of ProjectConfiguration
        This defines the structure of
        the soarAgents.json manifest file.
    end note

    class com.soartech.soarls.SoarFile {
        uri : URI
        contents : String
        // Only contains syntax errors.
        diagnostics : List<Diagnostic>
        ast : TclAstNode
    }
    note left of com.soartech.soarls.SoarFile
        Maintains the state of a document
        along with its Tcl syntax tree.
        Diagnostics only contain syntax errors;
        no further analysis is performed.
    end note

    Server -up-|> org.eclipse.lsp4j.LanguageServer
    Server *-- SoarDocumentService
    Server *-- SoarWorkspaceService

    SoarDocumentService -up-|> org.eclipse.lsp4j.TextDocumentService
    SoarDocumentService *-left- ProjectConfiguration
    SoarDocumentService *-- Configuration
    SoarDocumentService *-- Documents
    SoarDocumentService *-- com.soartech.soarls.analysis.ProjectAnalysis

    SoarWorkspaceService -up-|> org.eclipse.lsp4j.WorkspaceService
    SoarWorkspaceService o-- SoarDocumentService

    Documents *-- "0..*" com.soartech.soarls.SoarFile
}

note top of com.soartech.soarls.analysis
    This data is generated by the Analysis
    class whenever document edits are made.
    Once generated, it is immutable.
end note
namespace com.soartech.soarls.analysis {
    class ProjectAnalysis {
        entryPointUri : URI
        files : Map<URI, FileAnalysis>
        procedureDefinitions : Map<String, ProcedureDefinition>
        procedureCalls : Map<ProcedureDefinition, List<ProcedureCall>>
        variableDefinitions : Map<String, VariableDefinition>
        variableRetrievals : Map<VariableDefinition, List<VariableRetrieval>>
    }
    note right of ProjectAnalysis
        Most of the data is owned by
        the FileAnalysis class; this
        class just maintains an index
        for project-wide lookups.
    end note

    class FileAnalysis {
        uri : URI
        procedureCalls : Map<TclAstNode, ProcedureCall>
        variableRetrievals : Map<TclAstNode, VariableRetrieval>
        procedureDefinitions : List<ProcedureDefinition>
        filesSource : List<URI>
        productions : List<Production>
        diagnostics : List<Diagnostic>
    }

    class ProcedureDefinition {
        name : String
        location : Location
        arguments : List<Argument>
        ast : TclAstNode
        commentAstNode : Optional<TclAstNode>
        commentText : Optional<String>
    }

    class ProcedureCall {
        callSiteAst : TclAstNode
    }

    class VariableDefinition {
        name : String
        location : Location
        ast : TclAstNode
        value : String
        commentAstNode : Optional<TclAstNode>
        commentText : Optional<String>
    }

    class VariableRetrieval {
        readSiteLocation : Location
        readSiteAst : TclAstNode
    }

    class Production {
        name : String
        location : Location
        body : String
    }

    ProjectAnalysis *-- "1..*" FileAnalysis
    ProjectAnalysis o-- ProcedureDefinition
    ProjectAnalysis o-- ProcedureCall
    ProjectAnalysis o-- VariableDefinition
    ProjectAnalysis o-- VariableRetrieval

    FileAnalysis o-- com.soartech.soarls.SoarFile
    FileAnalysis *-- "0..*" ProcedureDefinition
    FileAnalysis *-- "0..*" ProcedureCall
    FileAnalysis *-- "0..*" VariableDefinition
    FileAnalysis *-- "0..*" VariableRetrieval
    FileAnalysis *-- "0..*" Production

    ProcedureCall o-- ProcedureDefinition

    VariableRetrieval o-- VariableDefinition
}

hide methods
@enduml
